fix OpenAPI
