# lambda/read/app.go
@@ -30,7 +30,7 @@ func HandleRequest(ctx context.Context, request events.APIGatewayProxyRequest) (
 	// 変換されたらリクエストタイプに応じて処理を分岐する
 	// 別のパッケージに移して処理を書く
 	// ここでDIする
-	res, err := RequestHandler.ParseRequestType(DBRepo.DBRepoImpl{}, *api_req.RequestType, *api_req.UserId)
+	res, err := RequestHandler.ParseRequestType(DBRepo.DBRepoImpl{}, *api_req.RequestType, *api_req.UserId,)
 	if err != nil {
 		return events.APIGatewayProxyResponse{}, err
 	}
