# lambda/write/app.go
@@ -14,6 +14,8 @@ import (
 )
 
 func HandleRequest(ctx context.Context, request events.APIGatewayProxyRequest) (events.APIGatewayProxyResponse, error) {
+	// アクセスしてきたIPアドレスを取得する
+	access_ip := request.RequestContext.Identity.SourceIP
 	var api_req api_gen_code.PostWriteJSONBody
 	decoderConfig := &mapstructure.DecoderConfig{
 		WeaklyTypedInput: true,
@@ -30,7 +32,7 @@ func HandleRequest(ctx context.Context, request events.APIGatewayProxyRequest) (
 	// 変換されたらリクエストタイプに応じて処理を分岐する
 	// 別のパッケージに移して処理を書く
 	// ここでDIする
-	res, err := RequestHandler.ParseRequestType(DBRepo.DBRepoImpl{}, *api_req.RequestType, *api_req.UserId,
+	res, err := RequestHandler.ParseRequestType(access_ip,DBRepo.DBRepoImpl{}, *api_req.RequestType, *api_req.UserId,
 		*api_req.RequestArgumentJson1, *api_req.RequestArgumentJson2)
 	if err != nil {
 		return events.APIGatewayProxyResponse{}, err
